[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/menus_cursor.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/map_picker.png" type="Texture" id=2]
[ext_resource path="res://sprites/lets_a_go.png" type="Texture" id=3]
[ext_resource path="res://code/lets_a_go_popup.gd" type="Script" id=4]
[ext_resource path="res://ui/1st_stage_preview.png" type="Texture" id=5]
[ext_resource path="res://fonts/NewShape-Bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://sprites/choose.png" type="Texture" id=7]
[ext_resource path="res://sprites/map.png" type="Texture" id=8]
[ext_resource path="res://sprites/Play_map_pressed.png" type="Texture" id=9]
[ext_resource path="res://sprites/play_map.png" type="Texture" id=10]
[ext_resource path="res://code/play_map.gd" type="Script" id=11]
[ext_resource path="res://sprites/back.png" type="Texture" id=12]
[ext_resource path="res://code/back_map_picker.gd" type="Script" id=13]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 6 )

[node name="map_picker" type="Control"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menus_cursor" parent="." instance=ExtResource( 1 )]
position = Vector2( 66.4821, 95.291 )
scale = Vector2( 0.06466, 0.0702146 )

[node name="map_picker" type="TextureRect" parent="."]
margin_right = 2169.0
margin_bottom = 1386.0
rect_scale = Vector2( 0.988118, 0.876233 )
texture = ExtResource( 2 )
expand = true

[node name="lets_a_go" type="TextureButton" parent="."]
margin_left = 812.84
margin_top = 274.243
margin_right = 1697.84
margin_bottom = 855.243
rect_scale = Vector2( 0.441313, 0.215545 )
texture_normal = ExtResource( 3 )
expand = true

[node name="lets_a_go_desc" type="Popup" parent="."]
visible = true
margin_left = 327.343
margin_top = 441.431
margin_right = 367.343
margin_bottom = 481.431
rect_scale = Vector2( 0.432368, 0.45939 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="lets_a_go_desc"]
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="lets_a_go_desc"]
margin_left = -601.439
margin_top = 399.879
margin_right = 262.561
margin_bottom = 447.879
rect_scale = Vector2( 3.50988, 8.10587 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.164706, 0.458824, 0.117647, 1 )
text = "Welcome to Pyramon Correction Center soldier!
Your job is to well... not let anyone escape. 
Good luck and don't drink during work!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="choose_text" type="TextureRect" parent="."]
margin_left = 638.186
margin_top = 31.6456
margin_right = 1826.19
margin_bottom = 395.646
rect_scale = Vector2( 0.304939, 0.357875 )
texture = ExtResource( 7 )

[node name="map_text" type="TextureRect" parent="."]
margin_left = 1049.2
margin_top = 31.8355
margin_right = 1665.2
margin_bottom = 351.835
rect_scale = Vector2( 0.3887, 0.418951 )
texture = ExtResource( 8 )

[node name="play_map" type="TextureButton" parent="."]
margin_left = 1496.05
margin_top = 984.97
margin_right = 3023.05
margin_bottom = 1550.98
rect_scale = Vector2( 0.251284, 0.224165 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
script = ExtResource( 11 )

[node name="back_map_picker" type="TextureButton" parent="."]
margin_left = 85.1533
margin_top = 14.6816
margin_right = 585.153
margin_bottom = 273.682
rect_scale = Vector2( 0.655033, 0.646224 )
texture_normal = ExtResource( 12 )
script = ExtResource( 13 )
[connection signal="pressed" from="lets_a_go" to="lets_a_go_desc" method="_on_lets_a_go_pressed"]
[connection signal="toggled" from="lets_a_go" to="lets_a_go_desc" method="_on_lets_a_go_toggled"]
[connection signal="pressed" from="play_map" to="play_map" method="_on_play_map_pressed"]
[connection signal="pressed" from="back_map_picker" to="back_map_picker" method="_on_back_map_picker_pressed"]
